ci: welcome button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<title>CH38</title>
 	</head>
 	<body>
-		<h1>Hello CH38, this is my first deploy</h1>
+		<h1>Hello CH38, we almost get out</h1>
+		<button>Click here</button>
 	</body>
 </html>
