Descripción de viernes tematico

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<body>
 		<h1>Hello Ch38</h1>
 		<h2>Generation Mx sessions</h2>
+		<p>Today is friday</p>
 		<button>Click here</button>
 	</body>
 </html>
