--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
-<html>
-	<head>
-		<title>CH38</title>
-	</head>
-	<body>
-		<h1>Hello Ch38</h1>
-		<h2>Generation Mx sessions</h2>
-		<p>Today is friday</p>
-		<button>Click here</button>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+<body>
+	<main>
+		<h1>CH38</h1>
+		<p>CH38 sessions of Generation</p>
+		<button>Click</button>
+	</main>
+	<footer>
+		
+	</footer>
+</body>
 </html>
