feat: Insert a parragraph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<main>
 		<h1>CH38</h1>
 		<p>CH38 sessions of Generation</p>
+		<p>Insert text here</p>
 		<button>Click</button>
 	</main>
 	<footer>
