--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./style.css">
+	<!-- Establece relaciones entre el hmtl y recursos externos -->
 	<title>Document</title>
 </head>
 <body>
 	<main>
 		<h1>CH38</h1>
 		<p>CH38 sessions of Generation</p>
-		<p>Insert text here</p>
+		<p>February, 2024</p>
+		<hr>
 		<button>Click</button>
 	</main>
 	<footer>
