typo: add a button with a prompt

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<p>CH38 sessions of Generation</p>
 		<p>February, 2024</p>
 		<hr>
-		<button>Click</button>
+		<button onclick="alertPage()">Click</button>
+		<button onclick="sentWavePerson()">Dime tu nombre</button>
 	</main>
 	<footer>
 		
